# RepoInsight

./: .gitignore  README.md  main.py  pyproject.toml
src/repoinsight/: __init__.py  analyze.py  clone.py  extract.py  generate_readme.py  utils.py
